# COS568-DistLM-SP26

./: .gitignore  main.py  plot_aggregate_loss.py  pyproject.toml  run_glue.py  run_glue_native.py  run_glue_single.py  test_distrib.py
RTE/: eval_results.txt  training_metrics_all_reduce.json  training_metrics_all_reduce_rank0.json  training_metrics_all_reduce_rank1.json  training_metrics_all_reduce_rank2.json  training_metrics_all_reduce_rank3.json  training_metrics_gather.json  training_metrics_gather_rank0.json  training_metrics_gather_rank1.json  training_metrics_gather_rank2.json  training_metrics_gather_rank3.json  training_metrics_native.json  training_metrics_single.json
RTE_single/: training_metrics.json
task-2a/: test_distrib.py
task-3/: run_glue.py
task-4/: README.md  run_glue.py
