[project]
name = "a2-dist-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apex>=0.9.10.dev0",
    "lazygit>=1.1",
    "numpy>=2.4.3",
    "pytorch-transformers>=1.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
